[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Máté Bendegúz Kovács <20370225+kmb5@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2023"}]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.2.1"
tqdm = "^4.66.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
